--- a/E/Epic/Vail_Resort_Template(T10)/ads/300x600/Vail/300x600_Vail.htm
+++ b/E/Epic/Vail_Resort_Template(T10)/ads/300x600/Vail/300x600_Vail.htm
@@ -162,6 +162,8 @@
                 newTextElement.id = 'frameText4';
                 newTextElement.dataset.text = 'frameText4';
                 textElement.parentNode.insertBefore(newTextElement, textElement.nextElementSibling);
+              }
+              if(layout == 'multipleimages') {
                 content.styleProperties = "{'#cta': {x:'-50%',y:0}}";
                 cta.style.left = "0";
                 cta.style.width = "auto";
@@ -170,18 +172,19 @@
                 cta.innerHTML = '<span style="' + cta.dataset.style + '">' + content.ctaText + '</span>';
                 cta.style.width = cta.offsetWidth + 'px';
                 cta.style.left = "50%";
-              } else if(layout == 'multipleimages' && !document.querySelector("#backgroundImage4")) {
-                content.styleProperties = "{'#frameText': {x:-7, y:-3}, '#frameText span': {css:{textAlign:'left'}}, '#cta': {y:0}, '#saleImage': {css:{display:'block'}}}";
-                cta.style.left = "12px";
-                cta.style.width = "auto";
-                cta.style.minWidth = "120px";
-                cta.style.maxWidth = "180px";
-                var frameText = document.querySelectorAll("div[id^=frameText]");
-                for (var i = 0; i < frameText.length; i++){
-                 frameText[i].classList.remove('text');
-                 frameText[i].classList.add('text-left');
-                }
               }
+              // else if(layout == 'multipleimages' && !document.querySelector("#backgroundImage4")) {
+              //   content.styleProperties = "{'#frameText': {x:-7, y:-3}, '#frameText span': {css:{textAlign:'left'}}, '#cta': {y:0}, '#saleImage': {css:{display:'block'}}}";
+              //   cta.style.left = "12px";
+              //   cta.style.width = "auto";
+              //   cta.style.minWidth = "120px";
+              //   cta.style.maxWidth = "180px";
+              //   var frameText = document.querySelectorAll("div[id^=frameText]");
+              //   for (var i = 0; i < frameText.length; i++){
+              //    frameText[i].classList.remove('text');
+              //    frameText[i].classList.add('text-left');
+              //   }
+              // }
             });
             return data;
           }
