--- a/E/Epic/Vail_Resort_Template(T10)/ads/728x90/Breckenridge/728x90_Breckenridge.htm
+++ b/E/Epic/Vail_Resort_Template(T10)/ads/728x90/Breckenridge/728x90_Breckenridge.htm
@@ -154,6 +154,8 @@
                 newTextElement.id = 'frameText4';
                 newTextElement.dataset.text = 'frameText4';
                 textElement.parentNode.insertBefore(newTextElement, textElement.nextElementSibling);
+              }
+              if(layout == 'multipleimages') {
                 content.styleProperties = "{'#cta': {y:25}}";
                 var cta = document.querySelector("#cta");
                 cta.style.left = "443px";
@@ -168,22 +170,23 @@
                  frameText[i].style.fontSize = '18.2px';
                  frameText[i].style.lineHeight = '1.2';
                 }
-              } else if(layout == 'multipleimages' && !document.querySelector("#backgroundImage4")) {
-                content.styleProperties = "{'#frameText': {x:2, y:1}, '#frameText span': {css:{textAlign:'left'}}, '#cta': {y:25}, '#saleImage': {css:{display:'block'}}}";
-                var cta = document.querySelector("#cta");
-                cta.style.left = "443px";
-                cta.style.width = "auto";
-                cta.style.minWidth = "80px";
-                cta.style.maxWidth = "120px";
-                cta.style.height = "27px";
-                var frameText = document.querySelectorAll("div[id^=frameText]");
-                for (var i = 0; i < frameText.length; i++){
-                 frameText[i].style.width = '204px';
-                 frameText[i].style.height = '46px';
-                 frameText[i].style.fontSize = '18.2px';
-                 frameText[i].style.lineHeight = '1.2';
-                }
               }
+              // else if(layout == 'multipleimages' && !document.querySelector("#backgroundImage4")) {
+              //   content.styleProperties = "{'#frameText': {x:2, y:1}, '#frameText span': {css:{textAlign:'left'}}, '#cta': {y:25}, '#saleImage': {css:{display:'block'}}}";
+              //   var cta = document.querySelector("#cta");
+              //   cta.style.left = "443px";
+              //   cta.style.width = "auto";
+              //   cta.style.minWidth = "80px";
+              //   cta.style.maxWidth = "120px";
+              //   cta.style.height = "27px";
+              //   var frameText = document.querySelectorAll("div[id^=frameText]");
+              //   for (var i = 0; i < frameText.length; i++){
+              //    frameText[i].style.width = '204px';
+              //    frameText[i].style.height = '46px';
+              //    frameText[i].style.fontSize = '18.2px';
+              //    frameText[i].style.lineHeight = '1.2';
+              //   }
+              // }
             });
             return data;
           }
