UI changes for WhistlerBlackcomb

--- a/E/Epic/Vail_Resort_Template(T10)/ads/970x250/WhistlerBlackcomb/970x250_WhistlerBlackcomb.htm
+++ b/E/Epic/Vail_Resort_Template(T10)/ads/970x250/WhistlerBlackcomb/970x250_WhistlerBlackcomb.htm
@@ -22,7 +22,7 @@
         font-family: arial,sans-serif;
         font-weight: 900;
         font-style: normal;
-        color: #CC0000;
+        color: #FFF;
         background-color: #fff;
       }
       .frame {
@@ -41,8 +41,8 @@
       <div id="backgroundImage1" class="asset frame" data-image="backgroundImage1"></div>
       <div id="backgroundImage2" class="asset frame multiframe" data-image="backgroundImage2"></div>
       <div id="backgroundImage3" class="asset frame multiframe" data-image="backgroundImage3"></div>
-      <div id="topWhitePatch" class="frame" style="top:-1198px;left:-636px;background-color:rgba(255, 255, 255, 0.85);"></div>
-      <div id="bottomWhitePatch" class="frame" style="left:596px;background-color:rgba(255, 255, 255, 0.9);"></div>
+      <div id="topWhitePatch" class="frame" style="top:-1198px;left:-636px;background-color:rgba(102, 0, 0, 0.7);"></div>
+      <div id="bottomWhitePatch" class="frame" style="left:596px;background-color:rgba(102, 0, 0, 0.7);"></div>
       <div id="logoImage" class="asset frame" data-image="logoImage"></div>
       <div id="saleImage" class="asset frame" data-image="saleImage" style="display:none;"></div>
       <!-- <div id="ref" class="asset frame" data-image="ref"></div> -->
