--- a/E/Epic/Vail_Resort_Template(T10)/ads/320x50/WhistlerBlackcomb/320x50_WhistlerBlackcomb.htm
+++ b/E/Epic/Vail_Resort_Template(T10)/ads/320x50/WhistlerBlackcomb/320x50_WhistlerBlackcomb.htm
@@ -22,7 +22,7 @@
         font-family: arial,sans-serif;
         font-weight: 900;
         font-style: normal;
-        color: #CC0000;
+        color: #FFF;
         background-color: #fff;
       }
       .frame {
@@ -41,15 +41,15 @@
       <div id="backgroundImage1" class="asset frame" data-image="backgroundImage1"></div>
       <div id="backgroundImage2" class="asset frame multiframe" data-image="backgroundImage2"></div>
       <div id="backgroundImage3" class="asset frame multiframe" data-image="backgroundImage3"></div>
-      <div id="topWhitePatch" class="frame" style="left:-292px;background-color:rgba(255, 255, 255, 0.85);"></div>
-      <div id="bottomWhitePatch" class="frame" style="left:160px;background-color:rgba(255, 255, 255, 0.9);"></div>
+      <div id="topWhitePatch" class="frame" style="left:-265px;background-color:rgba(102, 0, 0, 0.7);"></div>
+      <div id="bottomWhitePatch" class="frame" style="left:180px;background-color:rgba(102, 0, 0, 0.7);"></div>
       <div id="logoImage" class="asset frame" data-image="logoImage"></div>
       <div id="saleImage" class="asset frame" data-image="saleImage" style="display:none;"></div>
       <!-- <div id="ref" class="asset frame" data-image="ref"></div> -->
       <div id="frameText1" class="text-left MontserratBlack"
         data-text="frameText1"
         style="top: 3px;
-          left: 170px;
+          left: 190px;
           width: 82px;
           height: 44px;
           font-size: 11px;
@@ -59,7 +59,7 @@
       <div id="frameText2" class="text-left MontserratBlack"
         data-text="frameText2"
         style="top: 3px;
-          left: 170px;
+          left: 190px;
           width: 82px;
           height: 44px;
           font-size: 11px;
@@ -69,7 +69,7 @@
       <div id="frameText3" class="text-left MontserratBlack"
         data-text="frameText3"
         style="top: 3px;
-          left: 170px;
+          left: 190px;
           width: 82px;
           height: 44px;
           font-size: 11px;
@@ -151,7 +151,7 @@
               if(layout == 'multipleimages') {
                 content.styleProperties = "{'#cta': {y:13}}";
                 var cta = document.querySelector("#cta");
-                cta.style.left = "166px";
+                cta.style.left = "190px";
                 cta.style.width = "auto";
                 cta.style.minWidth = "55px";
                 cta.style.maxWidth = "90px";
