--- a/E/Epic/Vail_Resort_Template(T10)/ads/300x600/BeaverCreek/300x600_BeaverCreek.htm
+++ b/E/Epic/Vail_Resort_Template(T10)/ads/300x600/BeaverCreek/300x600_BeaverCreek.htm
@@ -14,9 +14,9 @@
         font-weight: 700;
         font-style: normal;
       }
-      .MontserratSemibold{
+      .MontserratBold{
         font-family: montserrat, sans-serif;
-        font-weight: 600;
+        font-weight: 700;
         font-style: normal;
       }
     </style>
@@ -51,37 +51,37 @@
       <div id="logoImage" class="asset frame" data-image="logoImage"></div>
       <div id="saleImage" class="asset frame" data-image="saleImage" style="display:none;"></div>
       <!-- <div id="ref" class="asset frame" data-image="ref"></div> -->
-      <div id="frameText1" class="text MontserratSemibold"
+      <div id="frameText1" class="text MontserratBold"
         data-text="frameText1"
         data-style="text-align:center;"
-        style="top: 457px;
+        style="top: 464px;
           left: 20px;
           width: 260px;
-          height: 60px;
+          height: 72px;
           font-size: 25px;
-          letter-spacing: 1.9px;
+          letter-spacing: 0.03em;
           line-height: 1.15;">
       </div>
-      <div id="frameText2" class="text MontserratSemibold"
+      <div id="frameText2" class="text MontserratBold"
         data-text="frameText2"
         data-style="text-align:center;"
-        style="top: 457px;
+        style="top: 464px;
           left: 20px;
           width: 260px;
-          height: 60px;
+          height: 72px;
           font-size: 25px;
-          letter-spacing: 1.9px;
+          letter-spacing: 0.03em;
           line-height: 1.15;">
       </div>
-      <div id="frameText3" class="text MontserratSemibold"
+      <div id="frameText3" class="text MontserratBold"
         data-text="frameText3"
         data-style="text-align:center;"
-        style="top: 457px;
+        style="top: 464px;
           left: 20px;
           width: 260px;
-          height: 60px;
+          height: 72px;
           font-size: 25px;
-          letter-spacing: 1.9px;
+          letter-spacing: 0.03em;
           line-height: 1.15;">
       </div>
       <div id="cta" class="text OpenSansCondensedBold"
@@ -93,14 +93,14 @@
           height: 34px;
           font-size: 14px;
           line-height: 20px;
-          letter-spacing: 2.2px;
+          letter-spacing: 0.05em;
           /*border-radius: 15px;*/
           color: #fff;">
       </div>
       <div id="overlay" style="top:0px;left:0px;width:inherit;height:inherit;background-color:#fff;opacity:1;-webkit-transition:all ease .5s;transition:all ease .5s;"></div>
     </div>
     <div id="loadFont" style="width:0;height:0;overflow:hidden;">
-      <div class="MontserratSemibold">MontserratSemibold</div>
+      <div class="MontserratBold">MontserratBold</div>
       <!-- <div class="TradeGothicNextLTProBoldCondensed">TradeGothicNextLTProBoldCondensed</div> -->
       <div class="OpenSansCondensedBold">OpenSansCondensedBold</div>
     </div>
