--- a/E/Epic/Vail_Resort_Template(T10)/ads/320x50/BeaverCreek/320x50_BeaverCreek.htm
+++ b/E/Epic/Vail_Resort_Template(T10)/ads/320x50/BeaverCreek/320x50_BeaverCreek.htm
@@ -14,9 +14,9 @@
         font-weight: 700;
         font-style: normal;
       }
-      .MontserratSemibold{
+      .MontserratBold{
         font-family: montserrat, sans-serif;
-        font-weight: 600;
+        font-weight: 700;
         font-style: normal;
       }
     </style>
@@ -51,34 +51,34 @@
       <div id="logoImage" class="asset frame" data-image="logoImage"></div>
       <div id="saleImage" class="asset frame" data-image="saleImage" style="display:none;"></div>
       <!-- <div id="ref" class="asset frame" data-image="ref"></div> -->
-      <div id="frameText1" class="text-left MontserratSemibold"
+      <div id="frameText1" class="text-left MontserratBold"
         data-text="frameText1"
         style="top: 3px;
           left: 170px;
           width: 82px;
           height: 44px;
           font-size: 11px;
-          letter-spacing: 1.1px;
+          letter-spacing: 0.05em;
           line-height: 1.1;">
       </div>
-      <div id="frameText2" class="text-left MontserratSemibold"
+      <div id="frameText2" class="text-left MontserratBold"
         data-text="frameText2"
         style="top: 3px;
           left: 170px;
           width: 82px;
           height: 44px;
           font-size: 11px;
-          letter-spacing: 1.1px;
+          letter-spacing: 0.05em;
           line-height: 1.1;">
       </div>
-      <div id="frameText3" class="text-left MontserratSemibold"
+      <div id="frameText3" class="text-left MontserratBold"
         data-text="frameText3"
         style="top: 3px;
           left: 170px;
           width: 82px;
           height: 44px;
           font-size: 11px;
-          letter-spacing: 1.1px;
+          letter-spacing: 0.05em;
           line-height: 1.1;">
       </div>
       <div id="cta" class="text OpenSansCondensedBold"
@@ -97,7 +97,7 @@
       <div id="overlay" style="top:0px;left:0px;width:inherit;height:inherit;background-color:#fff;opacity:1;-webkit-transition:all ease .5s;transition:all ease .5s;"></div>
     </div>
     <div id="loadFont" style="width:0;height:0;overflow:hidden;">
-      <div class="MontserratSemibold">MontserratSemibold</div>
+      <div class="MontserratBold">MontserratBold</div>
       <!-- <div class="TradeGothicNextLTProBoldCondensed">TradeGothicNextLTProBoldCondensed</div> -->
       <div class="OpenSansCondensedBold">OpenSansCondensedBold</div>
     </div>
