--- a/E/Epic/Vail_Resort_Template(T10)/ads/728x90/BeaverCreek/728x90_BeaverCreek.htm
+++ b/E/Epic/Vail_Resort_Template(T10)/ads/728x90/BeaverCreek/728x90_BeaverCreek.htm
@@ -14,9 +14,9 @@
         font-weight: 700;
         font-style: normal;
       }
-      .MontserratSemibold{
+      .MontserratBold{
         font-family: montserrat, sans-serif;
-        font-weight: 600;
+        font-weight: 700;
         font-style: normal;
       }
     </style>
@@ -51,53 +51,53 @@
       <div id="logoImage" class="asset frame" data-image="logoImage"></div>
       <div id="saleImage" class="asset frame" data-image="saleImage" style="display:none;"></div>
       <!-- <div id="ref" class="asset frame" data-image="ref"></div> -->
-      <div id="frameText1" class="text-left MontserratSemibold"
+      <div id="frameText1" class="text-left MontserratBold"
         data-text="frameText1"
         style="top: 4px;
           left: 442px;
           width: 170px;
           height: 80px;
           font-size: 21px;
-          letter-spacing: 2.2px;
+          letter-spacing: 0.05em;
           line-height: 1.1;">
       </div>
-      <div id="frameText2" class="text-left MontserratSemibold"
+      <div id="frameText2" class="text-left MontserratBold"
         data-text="frameText2"
         style="top: 4px;
           left: 442px;
           width: 170px;
           height: 80px;
           font-size: 21px;
-          letter-spacing: 2.2px;
+          letter-spacing: 0.05em;
           line-height: 1.1;">
       </div>
-      <div id="frameText3" class="text-left MontserratSemibold"
+      <div id="frameText3" class="text-left MontserratBold"
         data-text="frameText3"
         style="top: 4px;
           left: 442px;
           width: 170px;
           height: 80px;
           font-size: 21px;
-          letter-spacing: 2.2px;
+          letter-spacing: 0.05em;
           line-height: 1.1;">
       </div>
       <div id="cta" class="text OpenSansCondensedBold"
         data-text="ctaText"
-        data-style="padding:0px 10px 0px;"
+        data-style="padding:0px 10px 1px;"
         style="top: 29px;
           left: 623px;
           width: 94px;
           height: 30px;
           font-size: 13px;
           line-height: 20px;
-          letter-spacing: 1.1px;
+          letter-spacing: 0.05em;
           /*border-radius: 12px;*/
           color: #fff;">
       </div>
       <div id="overlay" style="top:0px;left:0px;width:inherit;height:inherit;background-color:#fff;opacity:1;-webkit-transition:all ease .5s;transition:all ease .5s;"></div>
     </div>
     <div id="loadFont" style="width:0;height:0;overflow:hidden;">
-      <div class="MontserratSemibold">MontserratSemibold</div>
+      <div class="MontserratBold">MontserratBold</div>
       <!-- <div class="TradeGothicNextLTProBoldCondensed">TradeGothicNextLTProBoldCondensed</div> -->
       <div class="OpenSansCondensedBold">OpenSansCondensedBold</div>
     </div>
