--- a/E/Epic/Vail_Resort_Template(T10)/ads/300x600/Breckenridge/300x600_Breckenridge.htm
+++ b/E/Epic/Vail_Resort_Template(T10)/ads/300x600/Breckenridge/300x600_Breckenridge.htm
@@ -59,7 +59,7 @@
           width: 260px;
           height: 72px;
           font-size: 25px;
-          letter-spacing: 1.9px;
+          letter-spacing: 0.05em;
           line-height: 1.15;">
       </div>
       <div id="frameText2" class="text PoppinsSemibold"
@@ -70,7 +70,7 @@
           width: 260px;
           height: 72px;
           font-size: 25px;
-          letter-spacing: 1.9px;
+          letter-spacing: 0.05em;
           line-height: 1.15;">
       </div>
       <div id="frameText3" class="text PoppinsSemibold"
@@ -81,7 +81,7 @@
           width: 260px;
           height: 72px;
           font-size: 25px;
-          letter-spacing: 1.9px;
+          letter-spacing: 0.05em;
           line-height: 1.15;">
       </div>
       <div id="cta" class="text PoppinsBold"
@@ -93,7 +93,7 @@
           height: 34px;
           font-size: 14px;
           line-height: 20px;
-          letter-spacing: 2.2px;
+          letter-spacing: 0.05em;
           /*border-radius: 15px;*/
           color: #fff;">
       </div>
