--- a/E/Epic/Vail_Resort_Template(T10)/ads/320x50/Breckenridge/320x50_Breckenridge.htm
+++ b/E/Epic/Vail_Resort_Template(T10)/ads/320x50/Breckenridge/320x50_Breckenridge.htm
@@ -58,7 +58,7 @@
           width: 82px;
           height: 44px;
           font-size: 11px;
-          letter-spacing: 1.1px;
+          letter-spacing: 0.05em;
           line-height: 1.1;">
       </div>
       <div id="frameText2" class="text-left PoppinsSemibold"
@@ -68,7 +68,7 @@
           width: 82px;
           height: 44px;
           font-size: 11px;
-          letter-spacing: 1.1px;
+          letter-spacing: 0.05em;
           line-height: 1.1;">
       </div>
       <div id="frameText3" class="text-left PoppinsSemibold"
@@ -78,7 +78,7 @@
           width: 82px;
           height: 44px;
           font-size: 11px;
-          letter-spacing: 1.1px;
+          letter-spacing: 0.05em;
           line-height: 1.1;">
       </div>
       <div id="cta" class="text PoppinsBold"
