--- a/E/Epic/Vail_Resort_Template(T10)/ads/160x600/Breckenridge/160x600_Breckenridge.htm
+++ b/E/Epic/Vail_Resort_Template(T10)/ads/160x600/Breckenridge/160x600_Breckenridge.htm
@@ -59,7 +59,7 @@
           width: 130px;
           height: 60px;
           font-size: 15px;
-          letter-spacing: 1.6px;
+          letter-spacing: 0.05em;
           line-height: 1.3;">
       </div>
       <div id="frameText2" class="text PoppinsSemibold"
@@ -70,7 +70,7 @@
           width: 130px;
           height: 60px;
           font-size: 15px;
-          letter-spacing: 1.6px;
+          letter-spacing: 0.05em;
           line-height: 1.3;">
       </div>
       <div id="frameText3" class="text PoppinsSemibold"
@@ -81,7 +81,7 @@
           width: 130px;
           height: 60px;
           font-size: 15px;
-          letter-spacing: 1.6px;
+          letter-spacing: 0.05em;
           line-height: 1.3;">
       </div>
       <div id="cta" class="text PoppinsBold"
@@ -93,7 +93,7 @@
           height: 28px;
           font-size: 12px;
           line-height: 20px;
-          letter-spacing: 1.1px;
+          letter-spacing: 0.05em;
           /*border-radius: 15px;*/
           color: #fff;">
       </div>
@@ -170,7 +170,7 @@
                   cta.style.lineHeight = 1.2;
                   cta.style.height = "40px";
                 }
-              } 
+              }
               // else if(layout == 'multipleimages' && !document.querySelector("#backgroundImage4")) {
               //   content.styleProperties = "{'#frameText': {x:-3, y:-11}, '#frameText span': {css:{textAlign:'left'}}, '#cta': {y:-20}, '#saleImage': {css:{display:'block'}}}";
               //   var cta = document.querySelector("#cta");
