--- a/E/Epic/Vail_Resort_Template(T10)/ads/300x250/Breckenridge/300x250_Breckenridge.htm
+++ b/E/Epic/Vail_Resort_Template(T10)/ads/300x250/Breckenridge/300x250_Breckenridge.htm
@@ -58,7 +58,7 @@
           width: 180px;
           height: 70px;
           font-size: 17px;
-          letter-spacing: 1.7px;
+          letter-spacing: 0.05em;
           line-height: 1.15;">
       </div>
       <div id="frameText2" class="text-left PoppinsSemibold"
@@ -68,7 +68,7 @@
           width: 180px;
           height: 70px;
           font-size: 17px;
-          letter-spacing: 1.7px;
+          letter-spacing: 0.05em;
           line-height: 1.15;">
       </div>
       <div id="frameText3" class="text-left PoppinsSemibold"
@@ -78,7 +78,7 @@
           width: 180px;
           height: 70px;
           font-size: 17px;
-          letter-spacing: 1.7px;
+          letter-spacing: 0.05em;
           line-height: 1.15;">
       </div>
       <div id="cta" class="text PoppinsBold"
@@ -90,7 +90,7 @@
           height: 28px;
           font-size: 12px;
           line-height: 20px;
-          letter-spacing: 1px;
+          letter-spacing: 0.05em;
           /* border-radius: 15px; */
           color: #fff;">
       </div>
