--- a/E/Epic/Vail_Resort_Template(T10)/ads/728x90/Breckenridge/728x90_Breckenridge.htm
+++ b/E/Epic/Vail_Resort_Template(T10)/ads/728x90/Breckenridge/728x90_Breckenridge.htm
@@ -58,7 +58,7 @@
           width: 170px;
           height: 80px;
           font-size: 21px;
-          letter-spacing: 2.2px;
+          letter-spacing: 0.05em;
           line-height: 1.1;">
       </div>
       <div id="frameText2" class="text-left PoppinsSemibold"
@@ -68,7 +68,7 @@
           width: 170px;
           height: 80px;
           font-size: 21px;
-          letter-spacing: 2.2px;
+          letter-spacing: 0.05em;
           line-height: 1.1;">
       </div>
       <div id="frameText3" class="text-left PoppinsSemibold"
@@ -78,7 +78,7 @@
           width: 170px;
           height: 80px;
           font-size: 21px;
-          letter-spacing: 2.2px;
+          letter-spacing: 0.05em;
           line-height: 1.1;">
       </div>
       <div id="cta" class="text PoppinsBold"
@@ -90,7 +90,7 @@
           height: 30px;
           font-size: 12px;
           line-height: 20px;
-          letter-spacing: 1.1px;
+          letter-spacing: 0.05em;
           /*border-radius: 12px;*/
           color: #fff;">
       </div>
