--- a/E/Epic/Vail_Resort_Template(T10)/ads/300x250/Northstar/300x250_Northstar.htm
+++ b/E/Epic/Vail_Resort_Template(T10)/ads/300x250/Northstar/300x250_Northstar.htm
@@ -22,7 +22,7 @@
         font-family: arial,sans-serif;
         font-weight: 900;
         font-style: normal;
-        color: #1b1b1b;
+        color: #7d1c25;
         background-color: #fff;
       }
       .frame {
@@ -41,8 +41,8 @@
       <div id="backgroundImage1" class="asset frame" data-image="backgroundImage1"></div>
       <div id="backgroundImage2" class="asset frame multiframe" data-image="backgroundImage2"></div>
       <div id="backgroundImage3" class="asset frame multiframe" data-image="backgroundImage3"></div>
-      <div id="topWhitePatch" class="frame" style="top:-213px;background-color:rgba(255, 255, 255, 0.85);"></div>
-      <div id="bottomWhitePatch" class="frame" style="top:165px;background-color:rgba(255, 255, 255, 0.9);"></div>
+      <div id="topWhitePatch" class="frame" style="top:-213px;background-color:white;"></div>
+      <div id="bottomWhitePatch" class="frame" style="top:165px;background-color:white;"></div>
       <div id="logoImage" class="asset frame" data-image="logoImage"></div>
       <div id="saleImage" class="asset frame" data-image="saleImage" style="display:none;"></div>
       <!-- <div id="ref" class="asset frame" data-image="ref"></div> -->
@@ -53,7 +53,7 @@
           width: 180px;
           height: 70px;
           font-size: 17px;
-          letter-spacing: 1.7px;
+          letter-spacing: 0.05em;
           line-height: 1.15;">
       </div>
       <div id="frameText2" class="text-left NeutraDisplayBold"
@@ -63,7 +63,7 @@
           width: 180px;
           height: 70px;
           font-size: 17px;
-          letter-spacing: 1.7px;
+          letter-spacing: 0.05em;
           line-height: 1.15;">
       </div>
       <div id="frameText3" class="text-left NeutraDisplayBold"
@@ -73,7 +73,7 @@
           width: 180px;
           height: 70px;
           font-size: 17px;
-          letter-spacing: 1.7px;
+          letter-spacing: 0.05em;
           line-height: 1.15;">
       </div>
       <div id="cta" class="text NeutraDisplayBold"
@@ -85,7 +85,7 @@
           height: 28px;
           font-size: 12px;
           line-height: 20px;
-          letter-spacing: 1px;
+          letter-spacing: 0.05em;
           border-radius: 15px;
           color: #fff;">
       </div>
@@ -129,7 +129,7 @@
           staticData: {
             // ref: 'ref.png'
             styleProperties: "na", //{'#cta': {y:10},'#logoImage': {y:10}}
-            ctaBtnColor: '#d7941c^#a57115',
+            ctaBtnColor: '#7d1c25^#d7941c',
           },
           beforeLoad: function(data){
             data.map(function(content){
