--- a/E/Epic/Vail_Resort_Template(T10)/ads/970x250/Northstar/970x250_Northstar.htm
+++ b/E/Epic/Vail_Resort_Template(T10)/ads/970x250/Northstar/970x250_Northstar.htm
@@ -22,7 +22,7 @@
         font-family: arial,sans-serif;
         font-weight: 900;
         font-style: normal;
-        color: #1b1b1b;
+        color: #7d1c25;
         background-color: #fff;
       }
       .frame {
@@ -41,8 +41,8 @@
       <div id="backgroundImage1" class="asset frame" data-image="backgroundImage1"></div>
       <div id="backgroundImage2" class="asset frame multiframe" data-image="backgroundImage2"></div>
       <div id="backgroundImage3" class="asset frame multiframe" data-image="backgroundImage3"></div>
-      <div id="topWhitePatch" class="frame" style="top:-1198px;left:-636px;background-color:rgba(255, 255, 255, 0.85);"></div>
-      <div id="bottomWhitePatch" class="frame" style="left:596px;background-color:rgba(255, 255, 255, 0.9);"></div>
+      <div id="topWhitePatch" class="frame" style="top:-1198px;left:-636px;background-color:white;"></div>
+      <div id="bottomWhitePatch" class="frame" style="left:596px;background-color:white;"></div>
       <div id="logoImage" class="asset frame" data-image="logoImage"></div>
       <div id="saleImage" class="asset frame" data-image="saleImage" style="display:none;"></div>
       <!-- <div id="ref" class="asset frame" data-image="ref"></div> -->
@@ -53,7 +53,7 @@
           width: 320px;
           height: 130px;
           font-size: 30px;
-          letter-spacing: 2.65px;
+          letter-spacing: 0.05em;
           line-height: 1.13;">
       </div>
       <div id="frameText2" class="text-left NeutraDisplayBold"
@@ -63,7 +63,7 @@
           width: 320px;
           height: 130px;
           font-size: 30px;
-          letter-spacing: 2.65px;
+          letter-spacing: 0.05em;
           line-height: 1.13;">
       </div>
       <div id="frameText3" class="text-left NeutraDisplayBold"
@@ -73,7 +73,7 @@
           width: 320px;
           height: 130px;
           font-size: 30px;
-          letter-spacing: 2.65px;
+          letter-spacing: 0.05em;
           line-height: 1.13;">
       </div>
       <div id="cta" class="text NeutraDisplayBold"
@@ -86,7 +86,7 @@
           height: 40px;
           font-size: 16px;
           line-height: 22px;
-          letter-spacing: 0.2em;
+          letter-spacing: 0.05em;
           border-radius: 20px;
           color: #fff;">
       </div>
@@ -130,7 +130,7 @@
           staticData: {
             // ref: 'ref.png'
             styleProperties: "na", //{'#cta': {y:10},'#logoImage': {y:10}}
-            ctaBtnColor: '#d7941c^#a57115',
+            ctaBtnColor: '#7d1c25^#d7941c',
           },
           beforeLoad: function(data){
             data.map(function(content){
