--- a/E/Epic/Vail_Resort_Template(T10)/ads/300x250/Keystone/300x250_Keystone.htm
+++ b/E/Epic/Vail_Resort_Template(T10)/ads/300x250/Keystone/300x250_Keystone.htm
@@ -22,7 +22,7 @@
         font-family: arial,sans-serif;
         font-weight: 900;
         font-style: normal;
-        color: #e63c2e;
+        color: #D65050;
         background-color: #fff;
       }
       .frame {
@@ -129,7 +129,7 @@
           staticData: {
             // ref: 'ref.png'
             styleProperties: "na", //{'#cta': {y:10},'#logoImage': {y:10}}
-            ctaBtnColor: '#e63c2e^#a82b21',
+            ctaBtnColor: '#D65050^#a82b21',
           },
           beforeLoad: function(data){
             data.map(function(content){
