--- a/E/Epic/Vail_Resort_Template(T10)/ads/728x90/ParkCity/728x90_ParkCity.htm
+++ b/E/Epic/Vail_Resort_Template(T10)/ads/728x90/ParkCity/728x90_ParkCity.htm
@@ -86,7 +86,7 @@
           font-size: 12px;
           line-height: 20px;
           letter-spacing: 1.1px;
-          border-radius: 12px;
+          border-radius: 5px;
           color: #fff;">
       </div>
       <div id="overlay" style="top:0px;left:0px;width:inherit;height:inherit;background-color:#fff;opacity:1;-webkit-transition:all ease .5s;transition:all ease .5s;"></div>
@@ -129,7 +129,7 @@
           staticData: {
             // ref: 'ref.png'
             styleProperties: "na", //{'#cta': {y:10},'#logoImage': {y:10}}
-            ctaBtnColor: '#414143^#aaacb0',
+            ctaBtnColor: '#00758c^#aaacb0',
           },
           beforeLoad: function(data){
             data.map(function(content){
