--- a/E/Epic/Vail_Resort_Template(T10)/ads/728x90/Stowe/728x90_Stowe.htm
+++ b/E/Epic/Vail_Resort_Template(T10)/ads/728x90/Stowe/728x90_Stowe.htm
@@ -22,7 +22,7 @@
         font-family: arial,sans-serif;
         font-weight: 900;
         font-style: normal;
-        color: #c4272f;
+        color: #384851;
         background-color: #fff;
       }
       .frame {
@@ -54,6 +54,8 @@
           height: 80px;
           font-size: 21px;
           letter-spacing: 2.2px;
+          font-weight: bold;
+          font-style: italic;
           line-height: 1.1;">
       </div>
       <div id="frameText2" class="text-left AvenirLTStdBook"
@@ -64,6 +66,8 @@
           height: 80px;
           font-size: 21px;
           letter-spacing: 2.2px;
+          font-weight: bold;
+          font-style: italic;
           line-height: 1.1;">
       </div>
       <div id="frameText3" class="text-left AvenirLTStdBook"
@@ -74,6 +78,8 @@
           height: 80px;
           font-size: 21px;
           letter-spacing: 2.2px;
+          font-weight: bold;
+          font-style: italic;
           line-height: 1.1;">
       </div>
       <div id="cta" class="text AvenirLTStdBook"
@@ -129,7 +135,7 @@
           staticData: {
             // ref: 'ref.png'
             styleProperties: "na", //{'#cta': {y:10},'#logoImage': {y:10}}
-            ctaBtnColor: '#74838e^#384851',
+            ctaBtnColor: '#c4272f^#384851',
           },
           beforeLoad: function(data){
             data.map(function(content){
