--- a/E/Epic/Vail_Resort_Template(T10)/ads/970x250/ParkCity/970x250_ParkCity.htm
+++ b/E/Epic/Vail_Resort_Template(T10)/ads/970x250/ParkCity/970x250_ParkCity.htm
@@ -87,7 +87,7 @@
           font-size: 16px;
           line-height: 22px;
           letter-spacing: 0.1em;
-          border-radius: 20px;
+          border-radius: 5px;
           color: #fff;">
       </div>
       <div id="overlay" style="top:0px;left:0px;width:inherit;height:inherit;background-color:#fff;opacity:1;-webkit-transition:all ease .5s;transition:all ease .5s;"></div>
@@ -130,7 +130,7 @@
           staticData: {
             // ref: 'ref.png'
             styleProperties: "na", //{'#cta': {y:10},'#logoImage': {y:10}}
-            ctaBtnColor: '#414143^#aaacb0',
+            ctaBtnColor: '#00758c^#aaacb0',
           },
           beforeLoad: function(data){
             data.map(function(content){
