--- a/E/Epic/Vail_Resort_Template(T10)/ads/300x600/Stowe/300x600_Stowe.htm
+++ b/E/Epic/Vail_Resort_Template(T10)/ads/300x600/Stowe/300x600_Stowe.htm
@@ -22,7 +22,7 @@
         font-family: arial,sans-serif;
         font-weight: 900;
         font-style: normal;
-        color: #c4272f;
+        color: #384851;
         background-color: #fff;
       }
       .frame {
@@ -55,6 +55,8 @@
           height: 72px;
           font-size: 25px;
           letter-spacing: 1.9px;
+          font-weight: bold;
+          font-style: italic;
           line-height: 1.15;">
       </div>
       <div id="frameText2" class="text AvenirLTStdBook"
@@ -66,6 +68,8 @@
           height: 72px;
           font-size: 25px;
           letter-spacing: 1.9px;
+          font-weight: bold;
+          font-style: italic;
           line-height: 1.15;">
       </div>
       <div id="frameText3" class="text AvenirLTStdBook"
@@ -77,6 +81,8 @@
           height: 72px;
           font-size: 25px;
           letter-spacing: 1.9px;
+          font-weight: bold;
+          font-style: italic;
           line-height: 1.15;">
       </div>
       <div id="cta" class="text AvenirLTStdBook"
@@ -132,7 +138,7 @@
           staticData: {
             // ref: 'ref.png'
             styleProperties: "na", //{'#cta': {y:10},'#logoImage': {y:10}}
-            ctaBtnColor: '#74838e^#384851',
+            ctaBtnColor: '#c4272f^#384851',
           },
           beforeLoad: function(data){
             data.map(function(content){
